proj1/tests/correct/subscript2.py
l = ["a", "b", (4),]
l[0] = (1, 2)
print l
