proj1/tests/error/targetList3.py
l = [0, [1, 2]]
(a, (b, c)) = l
print 'str'

